# E-commerce_shop

./: README.md  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/orders/: order_list.html  shopcar.html
products/: admin.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py
products/templates/products/: product_detail.html  product_list.html
templates/: _form.html  _nav.html  base.html
users/: forms.py  urls.py  views.py
users/templates/users/: login.html  password_change.html  password_reset.html  profile.html  register.html
users/templates/users/email/: password_reset_confirm.html  password_reset_email.html  password_reset_subject_txt
