[tool.poetry]
name = "django-shop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
django-bootstrap-v5 = "^1.0.11"
django-extensions = "^3.2.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
